# intimar-sistema

./: .gitignore  .pre-commit-config.yaml  README.md  package.json  pyproject.toml  requirements.txt  setup.py
frontend/: .gitignore  build_log.txt  build_log_ui.txt  build_log_ui_2.txt  build_log_ui_3.txt  final_build_log.txt  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
frontend/public/: RESERVAS DIARIAS (1).xlsx
frontend/src/: App.vue  main.ts  router.ts
frontend/src/components/: NotificationManager.vue  NotificationPanel.vue  Sidebar.vue
frontend/src/components/Reservas/: ReservasFilter.vue  ReservasTable.vue
frontend/src/data/: session.ts
frontend/src/pages/: CalendarioReservas.vue  ClienteDetalle.vue  Clientes.vue  Configuracion.vue  Dashboard.vue  GestionMesas.vue  Login.vue  MapaMesas.vue  Notifications.vue  Perfil.vue  ReservaForm.vue  ReservaPublica.vue  Reservas.vue  Usuarios.vue
frontend/src/utils/: pdfExport.js
intimar_erp/: __init__.py  api.py  create_fields.py  hooks.py  make_field_visible.py  sync_all_dates.py
intimar_erp/intimar/: whatsapp.py
intimar_erp/intimar/doctype/anticipo_reserva_intimar/: anticipo_reserva_intimar.json  anticipo_reserva_intimar.py
intimar_erp/intimar/doctype/cliente_intimar/: cliente_intimar.js  cliente_intimar.json  cliente_intimar.py  test_cliente_intimar.py
intimar_erp/public/: .gitignore  test.txt
intimar_erp/public/frontend/: index.html
intimar_erp/www/: apps.html  intimar.html  intimar.py
scratch/: check_error.py
(+111 files in other folders)
