[project]
name = "intimar_erp"
authors = [
    { name = "Intimar", email = "nicole.argueda@gmail.com"}
]
description = "Sistema de gestión y reservas para Intimar"
requires-python = ">=3.10"
readme = "README.md"
version = "0.0.1"

dependencies = [
    "frappe>=15.0.0,<16.0.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
